--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,18 @@
 * {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 body {
   background: #222222;
+}
+
+.container {
+  max-width: 1140px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
 /*  INTRODUCTION  */
@@ -14,32 +21,28 @@ body {
   position: relative;
 }
 
-.back-img img {
+.intro .back-img img {
   width: 100%;
+  -o-object-fit: contain;
   object-fit: contain;
 }
 
-.marvel-img {
+.intro .marvel-img {
   position: absolute;
-  max-width: 500px;
+  max-width: 400px;
   left: 50%;
   transform: translateX(-50%);
   bottom: 0px;
 }
 
-.marvel-img img {
+.intro .marvel-img img {
   width: 100%;
   object-fit: cover;
 }
 
 /* FILMS CATEGORIES */
-.container {
-  max-width: 1140px;
-  margin: 0 auto;
-  padding: 0 20px;
-}
-
 .films {
+  display: -ms-grid;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   row-gap: 105px;
@@ -47,29 +50,30 @@ body {
   margin-top: 300px;
 }
 
-.card {
+.films .card {
   padding: 0 12px;
   border: 1px solid #fff;
 }
 
-.card-top {
+.films .card-top {
   border-top: 1px solid #fff;
   margin-top: -50px;
 }
 
-.card-top img {
+.films .card-top img {
   margin-top: 10px;
   width: 100%;
+  -o-object-fit: cover;
   object-fit: cover;
 }
 
-.card-bottom {
+.films .card-bottom {
   padding: 16px 0;
   color: #fff;
   text-align: center;
 }
 
-.card-bottom h6 {
+.films .card-bottom h6 {
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
@@ -78,11 +82,17 @@ body {
 /* Pagination */
 .pagination {
   margin: 90px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 20px;
   color: #7e7e7e;
   font-size: 20px;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
   justify-content: end;
 }
 
@@ -93,8 +103,12 @@ body {
 }
 
 .pages {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 0px;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -137,3 +151,4 @@ body {
     grid-template-columns: repeat(1, 1fr);
   }
 }
+/*# sourceMappingURL=style.css.map */
